--- a/.github/workflows/publish-all-platforms.yml
+++ b/.github/workflows/publish-all-platforms.yml
@@ -121,6 +121,7 @@ jobs:
       swift-package-version: ${{ needs.pre-setup.outputs.swift-package-version || '0.0.2' }}
       publish: ${{ needs.pre-setup.outputs.publish }}
       use-dummy-binaries: ${{ needs.pre-setup.outputs.use-dummy-binaries }}
+      uniffi-25: ${{ !!needs.pre-setup.outputs.csharp-package-version || !!needs.pre-setup.outputs.golang-package-version || !!needs.pre-setup.outputs.kotlin-multiplatform-package-version }}
     steps:
       - run: echo "set setup output variables"
 
@@ -132,6 +133,7 @@ jobs:
       repository: ${{ needs.setup.outputs.repository }}
       ref: ${{ needs.setup.outputs.ref }}
       use-dummy-binaries: ${{ needs.setup.outputs.use-dummy-binaries == 'true' }}
+      uniffi-25: ${{ needs.setup.outputs.uniffi-25 == 'true' }}
 
   build-bindings-darwin:
     needs: setup
@@ -141,6 +143,7 @@ jobs:
       repository: ${{ needs.setup.outputs.repository }}
       ref: ${{ needs.setup.outputs.ref }}
       use-dummy-binaries: ${{ needs.setup.outputs.use-dummy-binaries == 'true' }}
+      uniffi-25: ${{ needs.setup.outputs.uniffi-25 == 'true' }}
 
   build-bindings-linux:
     needs: setup
@@ -150,6 +153,7 @@ jobs:
       repository: ${{ needs.setup.outputs.repository }}
       ref: ${{ needs.setup.outputs.ref }}
       use-dummy-binaries: ${{ needs.setup.outputs.use-dummy-binaries == 'true' }}
+      uniffi-25: ${{ needs.setup.outputs.uniffi-25 == 'true' }}
 
   build-bindings-android:
     needs: setup
@@ -159,6 +163,7 @@ jobs:
       repository: ${{ needs.setup.outputs.repository }}
       ref: ${{ needs.setup.outputs.ref }}
       use-dummy-binaries: ${{ needs.setup.outputs.use-dummy-binaries == 'true' }}
+      uniffi-25: ${{ needs.setup.outputs.uniffi-25 == 'true' }}
 
   build-bindings-ios:
     needs: setup
@@ -168,6 +173,7 @@ jobs:
       repository: ${{ needs.setup.outputs.repository }}
       ref: ${{ needs.setup.outputs.ref }}
       use-dummy-binaries: ${{ needs.setup.outputs.use-dummy-binaries == 'true' }}
+      uniffi-25: ${{ needs.setup.outputs.uniffi-25 == 'true' }}
 
   build-language-bindings:
     needs: setup
