--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["lib", "cdylib", "staticlib"]
 [features]
 default = ["frb"]
 frb = ["dep:flutter_rust_bridge"]
+# Uniffi features required to build using cargo-lipo
+uniffi-25 = []
+uniffi-28 = []
 
 [lints]
 workspace = true
