--- a/.github/workflows/build-bindings-android.yml
+++ b/.github/workflows/build-bindings-android.yml
@@ -21,14 +21,35 @@ on:
         required: false
         type: boolean
         default: false
+      uniffi-25:
+        description: 'If true, builds additional bindings for Uniffi 0.25'
+        required: false
+        type: boolean
+        default: false
 
 jobs:
+  setup:
+    name: Setup
+    runs-on: ubuntu-latest
+    steps:
+      - id: set-matrix
+        run: |
+          if [ ${{ inputs.uniffi-25 }} == true ]; then
+            echo "::set-output name=matrix::['', '-uniffi-25']"
+          else
+            echo "::set-output name=matrix::['']"
+          fi
+    outputs:
+      uniffi-matrix: ${{ steps.set-matrix.outputs.matrix }}
+
   build:
     if: ${{ !inputs.use-dummy-binaries }}
     runs-on: ubuntu-latest
-    name: build ${{ matrix.target }}
+    name: build ${{ matrix.target }}${{ matrix.uniffi }}
+    needs: setup
     strategy:
       matrix:
+        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-linux-android,
           x86_64-linux-android,
@@ -55,12 +76,18 @@ jobs:
         
     - uses: Swatinem/rust-cache@v2
       with:
+        key: ${{ matrix.uniffi }}
         workspaces: lib
 
     - name: Build bindings
+      if: matrix.uniffi != '-uniffi-25'
       working-directory: lib/bindings
-      run: |
-        cargo ndk -t ${{ matrix.target }} build --release
+      run: cargo ndk -t ${{ matrix.target }} build --release
+
+    - name: Build bindings Uniffi 0.25
+      if: matrix.uniffi == '-uniffi-25'
+      working-directory: lib/bindings
+      run: cargo ndk -t ${{ matrix.target }} build --no-default-features --features=uniffi-25 --release
 
     - name: Copy build output
       run: |
@@ -73,36 +100,43 @@ jobs:
     - name: Archive release
       uses: actions/upload-artifact@v4
       with:
-        name: bindings-${{ matrix.target }}
+        name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
         path: dist/*
   
   jnilibs:
-    needs: build
+    needs: 
+    - setup
+    - build
     runs-on: ubuntu-latest
-    name: build jniLibs
+    name: build jniLibs${{ matrix.uniffi }}
+    strategy:
+      matrix:
+        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-aarch64-linux-android
+          name: bindings-aarch64-linux-android${{ matrix.uniffi }}
           path: arm64-v8a
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-x86_64-linux-android
+          name: bindings-x86_64-linux-android${{ matrix.uniffi }}
           path: x86_64
       
       - name: Archive jniLibs
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-android-jniLibs
+          name: bindings-android-jniLibs${{ matrix.uniffi }}
           path: ./*
 
   build-dummies:
     if: ${{ inputs.use-dummy-binaries }}
     runs-on: ubuntu-latest
-    name: build android dummies
+    name: build dummies ${{ matrix.target }}${{ matrix.uniffi }}
+    needs: setup
     strategy:
       matrix:
+        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-linux-android,
           x86_64-linux-android,
@@ -116,26 +150,31 @@ jobs:
       - name: Upload dummy Android ${{ matrix.target }} artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-${{ matrix.target }}
+          name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
           path: ./*
 
   jnilibs-dummy:
-    needs: build-dummies
+    needs: 
+    - setup
+    - build-dummies
     runs-on: ubuntu-latest
-    name: build jniLibs dummy
+    name: build jniLibs dummy ${{ matrix.target }}${{ matrix.uniffi }}
+    strategy:
+      matrix:
+        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-aarch64-linux-android
+          name: bindings-aarch64-linux-android${{ matrix.uniffi }}
           path: arm64-v8a
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-x86_64-linux-android
+          name: bindings-x86_64-linux-android${{ matrix.uniffi }}
           path: x86_64
       
       - name: Archive jniLibs
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-android-jniLibs
+          name: bindings-android-jniLibs${{ matrix.uniffi }}
           path: ./*
