--- a/.github/workflows/build-language-bindings.yml
+++ b/.github/workflows/build-language-bindings.yml
@@ -60,6 +60,7 @@ on:
 jobs:
   build-language-bindings:
     runs-on: ubuntu-latest
+    if: ${{ inputs.kotlin || inputs.swift || inputs.python }}
     steps:
       - name: Checkout breez-sdk-liquid repo
         uses: actions/checkout@v4
@@ -77,12 +78,16 @@ jobs:
         with:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+        
+      - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: lib
 
       - name: Build Kotlin binding
         if: ${{ inputs.kotlin }}
         working-directory: lib/bindings
         run: |
-          cargo run --features=uniffi/cli --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --language kotlin -o ffi/kotlin
+          cargo run --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --language kotlin -o ffi/kotlin
   
       - name: Archive Kotlin binding
         if: ${{ inputs.kotlin }}
@@ -90,19 +95,12 @@ jobs:
         with:
           name: bindings-kotlin
           path: lib/bindings/ffi/kotlin/breez_sdk_liquid/breez_sdk_liquid.kt
-
-      - name: Archive Kotlin multiplatform binding
-        if: ${{ inputs.kotlin }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings-kotlin-multiplatform
-          path: lib/bindings/ffi/kmp/*
       
       - name: Build Swift binding
         if: ${{ inputs.swift }}
         working-directory: lib/bindings
         run: |
-          cargo run --features=uniffi/cli --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --no-format --language swift --out-dir langs/swift/Sources/BreezSDKLiquid
+          cargo run --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --no-format --language swift --out-dir langs/swift/Sources/BreezSDKLiquid
           mv langs/swift/Sources/BreezSDKLiquid/breez_sdk_liquid.swift langs/swift/Sources/BreezSDKLiquid/BreezSDKLiquid.swift
       
       - name: Archive Swift binding
@@ -116,7 +114,7 @@ jobs:
         if: ${{ inputs.python }}
         working-directory: lib/bindings
         run: |
-            cargo run --features=uniffi/cli --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --language python -o ffi/python
+            cargo run --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --language python -o ffi/python
     
       - name: Archive Python binding
         if: ${{ inputs.python }}
@@ -124,6 +122,45 @@ jobs:
         with:
           name: bindings-python
           path: lib/bindings/ffi/python/breez_sdk_liquid.py
+
+  build-language-bindings-uniffi-25:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.kotlin || inputs.csharp || inputs.golang }}
+    steps:
+      - name: Checkout breez-sdk-liquid repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ inputs.repository || github.repository }}
+          ref: ${{ inputs.ref || github.sha }}
+
+      - name: Install rust
+        run: |
+          rustup set auto-self-update disable
+          rustup toolchain install stable --profile minimal
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v3
+        with:
+          version: "27.2"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          key: uniffi-25
+          workspaces: lib
+
+      - name: Build Kotlin binding
+        if: ${{ inputs.kotlin }}
+        working-directory: lib/bindings
+        run: |
+          cargo run --no-default-features --features=uniffi-25 --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --language kotlin -o ffi/kotlin
+
+      - name: Archive Kotlin multiplatform binding
+        if: ${{ inputs.kotlin }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: bindings-kotlin-multiplatform
+          path: lib/bindings/ffi/kmp/*
 
       - name: Build C# binding
         if: ${{ inputs.csharp }}
