--- a/lib/bindings/langs/swift/breez_sdk_liquidFFI.xcframework/macos-arm64_x86_64/breez_sdk_liquidFFI.framework/Info.plist
+++ b/lib/bindings/langs/swift/breez_sdk_liquidFFI.xcframework/macos-arm64_x86_64/breez_sdk_liquidFFI.framework/Info.plist
@@ -18,6 +18,8 @@
     </array>
     <key>CFBundleSignature</key>
     <string>????</string>
+    <key>CFBundleShortVersionString</key>
+    <string>0.1.0</string>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>MinimumOSVersion</key>
