--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -112,7 +112,7 @@ wasm-bindgen-test = "0.3.33"
 rand = "0.8"
 getrandom = { version = "0.2", features = ["js"] }
 wasm-bindgen-futures = "0.4.50"
-gloo-timers = "0.3.0"
+gloo-timers = { version = "0.3.0", features = ["futures"] }
 futures = "0.3.31"
 
 [build-dependencies]
